Frondend: customise landing component & signup component, users reducer & service

--- a/frondend/src/index.css
+++ b/frondend/src/index.css
@@ -6,3 +6,6 @@
     background-size: cover;
     background-image: url("./assest/bg.jpg");
 }
+.logo {
+  background-image: url("./assest/hiring.png");
+}
