--- a/frondend/src/index.css
+++ b/frondend/src/index.css
@@ -1,11 +1,8 @@
 .bg {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-image: url("./assest/bg.jpg");
-}
-.logo {
-  background-image: url("./assest/hiring.png");
+  background-image: url("./assest/bg.jpg");
+  height: 100%;
+  min-height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
