--- a/frond-end-cra/src/index.css
+++ b/frond-end-cra/src/index.css
@@ -8,21 +8,43 @@ body {
   margin: 0;
   font: var(--font-body);
 
+
+;
 }
 .bg {
-  box-sizing: border-box;
-  background-image: url("./assest/bg.jpg");
+
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
   height: 100vh;
   width: 100vw;
-  right: 0; left: 0; top: 0; bottom: 0;
   position: absolute;
   display: flex;
+  justify-content: center;
+  background-image: url("./assest/bg.jpg");
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  align-items: center;
+  align-content: center;
+}
+.container {
+  margin: 4rem;
+  
+  opacity: 0;
+  transition: transform 800ms ease ,opacity 800ms ease;
+  transform: translate(-100%, 0);
+}
+.container.visible {
+  opacity: 1;
+  transform: translate(0, 0);
+
 }
 
 .card {
+  /* margin: 1rem; */
   opacity: 0;
   transition: transform 800ms ease ,opacity 800ms ease;
   transform: translate(-100%, 0);
@@ -39,7 +61,7 @@ h1 {
   text-shadow: 0 1px 2px rgb(106, 106, 206);
 }
 
-
-
-
+.jobs {
+  display: grid;
+}
 
