--- a/frond-end-cra/src/index.css
+++ b/frond-end-cra/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --font-body: 500 1.25rem Helvetica, sans-serif;
+  --layout-margin: 7rem;
 }
 .html {
   font-size: 16px;
@@ -26,10 +27,16 @@ body {
   opacity: 1;
   transform: translate(0, 0);
 }
+.card {
+  transition: transform 800ms ease;
+}
+.card.scale:hover {
+  transform: scale(1.1);
+}
 
 h1 {
   text-shadow: 0 1px 2px rgb(106, 106, 206);
 }
 .margin {
-  margin: 10rem auto;
+  margin: var(--layout-margin) auto;
 }
