--- a/frond-end-cra/src/index.css
+++ b/frond-end-cra/src/index.css
@@ -40,3 +40,22 @@ h1 {
 .margin {
   margin: var(--layout-margin) auto;
 }
+.alert.alert-primary {
+  opacity: 0;
+  transition: transform 800ms ease, opacity 800ms ease;
+  transform: translate(-100%, 0);
+}
+.alert.alert-success,
+.alert.alert-danger {
+  opacity: 1;
+  transition: transform 800ms ease, opacity 800ms ease;
+  transform: translate(0, 0);
+}
+.alert.alert-success ~ .alert.alert-primary,
+.alert.alert-danger ~ .alert.alert-primary {
+  opacity: 0;
+  transition: opacity 800ms ease, transform 800ms ease;
+  transform: translate(-100%, 0), translate(scale(0));
+}
+
+/* alert alert-primary */
