--- a/frondend/src/index.css
+++ b/frondend/src/index.css
@@ -28,8 +28,8 @@ body {
   transform: translate(-100%, 0) scale(0);
 }
 .container.visible {
-  padding: 0;
-  margin: 0 auto;
+  padding: 1rem;
+  margin: auto;
   opacity: 1;
   transform: translate(0, 0) scale(1);
 }
@@ -75,7 +75,9 @@ h1 {
 /* alert alert-primary */
 .page {
   margin: var(--layout-margin);
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
+  /* margin: 5rem; */
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
